maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: not found: value casesLibres
  while (casesLibres()) { //Tant que toutes les cases ne portent pas d'indication,
         ^JediEscaper:25: error: not found: value indicationCasesAdjacentes
          indicationCasesAdjacentes(cpt+1, x, y) //On marque les cases adjacentes
          ^